--- a/unit/cart.html
+++ b/unit/cart.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="checkout">
-      <div class="app">
+      <div id="app">
         <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs>
             <symbol id="icon-add" viewBox="0 0 32 32">
