--- a/unit/cart.html
+++ b/unit/cart.html
@@ -10,7 +10,7 @@
     <link href="css/checkout.css" rel="stylesheet">
     <link href="css/modal.css" rel="stylesheet">
     <style type="text/css">
-        .quentity input {
+        .quantity input {
             width: 40px;
             padding: 5px 10px;
             text-align: center;
